--- a/src/components/index/layout.scss
+++ b/src/components/index/layout.scss
@@ -6,9 +6,8 @@
   display: grid;
 }
 
-.complete {
-  color: #14b749;
-  padding-left: 8px;
+li {
+  padding-left: 10px;
   background: url(../../images/tick.svg) 0 50% no-repeat;
 }
 
