💄 remove text-indent: -9999px
- using text-indent:100%, overflow: hidden

--- a/src/components/index/calendar.scss
+++ b/src/components/index/calendar.scss
@@ -41,7 +41,7 @@
     width: 6px;
     height: 6px;
     overflow: hidden;
-    text-indent: -9999px;
+    text-indent: 100%;
     border-radius: 3px;
     padding: 0;
     position: absolute;
